Actually fix function references